<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neato_temple_run</name>
  <version>0.0.0</version>
  <description>Temple Run-Inspired Neato Runner (Dynamic Path Planning from LIDAR and Vision)</description>
  <maintainer email="abobesh@olin.edu">AriB2003</maintainer>
  <maintainer email="cnie@olin.edu">chrdn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>built_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
